# gore

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  make.py
cmake/: GOREConfig.cmake.in  GoreConfig.cmake.in
common/: test.hpp
common/gore/: autoexec.hpp  gore_api.hpp  module_registry.hpp  weak.hpp
common/stubs/: module_registry.cpp
gore/: hello.cpp  hello.hpp
gore/base/logger/: logger.cpp  logger.h
gore/base/logger/message/: basic_message.h  message.h  message_view.cpp  message_view.h
gore/core/: platform.h
gore/core/exception/: crash.hpp
gore/core/object/: identificator.hpp  object.hpp
gore/core/sys/: file_separator.hpp  platform.h
gore/test/: hello.cpp  hello.h  hello.hpp  logger.cpp  logger.h  ticker.cpp  ticker.h
gore/time/: clock.hpp  time.hpp
include/core/logger/: core_logger.cpp  core_logger.hpp
include/core/time/: basic_clock.hpp  local_clock.cpp  local_clock.hpp  system_clock.cpp  system_clock.hpp  ticker.cpp  ticker.hpp
include/core/time/clock/: basic_clock.hpp  local_clock.cpp  local_clock.hpp  system_clock.cpp  system_clock.hpp
include/time/: basic_clock.hpp  gore_clock.hpp
include/utility/: shutdown_invoker.cpp  shutdown_invoker.hpp
lib/time/: clock.cpp
modules/core/: CMakeLists.txt
modules/core/include/: core.hpp
modules/core/include/module_registry/: p_module_registry.hpp
modules/core/src/: core.cpp
modules/core/src/module_registry/: module_registry.cpp
modules/logger/: CMakeLists.txt
modules/logger/include/: logger.hpp
modules/logger/src/: logger.cpp
modules/time/: CMakeLists.txt
modules/time/include/: clock.hpp  time.hpp
modules/time/src/: clock.cpp  time.cpp
src/core/: CMakeLists.txt
src/core/include/gore/core/: gore.hpp  test.hpp
src/core/include/gore/core/platform/: platform.hpp
src/core/src/: test.cpp
src/core/src/platform/: platform.cpp
src/time/: CMakeLists.txt
src/time/include/gore/time/: clock.hpp  time.hpp
src/time/include/gore/time/clock/: lazy_clock.hpp
src/time/src/clock/: lazy_clock.cpp  test.cpp
